force-app/main/default/objects/TestDriveStaff__c/TestDriveStaff__c.object-meta.xml
<CustomObject>
    <label>시승 담당 직원</label>
    <nameField>
        <label>시승 담당 직원 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>시승 담당 직원</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>