force-app/main/default/objects/TestDriveStaff__c/fields/AssignedFlagshipStore__c.field-meta.xml
<CustomField>
    <fullName>AssignedFlagshipStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>소속 플래그십 스토어</label>
    <referenceTo>Flagship_Store__c</referenceTo>
    <relationshipLabel>시승 담당 직원</relationshipLabel>
    <relationshipName>TestDriveStaff</relationshipName>
    <type>Lookup</type>
</CustomField>