force-app/main/default/objects/TestDriveStaff__c/fields/OffDays__c.field-meta.xml
<CustomField>
    <fullName>OffDays__c</fullName>
    <label>휴무일</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>월</fullName>
            </value>
            <value>
                <fullName>화</fullName>
            </value>
            <value>
                <fullName>수</fullName>
            </value>
            <value>
                <fullName>목</fullName>
            </value>
            <value>
                <fullName>금</fullName>
            </value>
            <value>
                <fullName>토</fullName>
            </value>
            <value>
                <fullName>일</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>