force-app/main/default/objects/TestDriveStaff__c/fields/SupportStaffDrive__c.field-meta.xml
<CustomField>
    <fullName>SupportStaffDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>동승 시승 가능 지원 여부</label>
    <type>Checkbox</type>
</CustomField>