force-app/main/default/objects/TestDriveStaff__c/fields/WorkEnd__c.field-meta.xml
<CustomField>
    <fullName>WorkEnd__c</fullName>
    <label>근무 종료 시간</label>
    <type>Time</type>
</CustomField>