force-app/main/default/objects/TestDriveStaff__c/fields/WorkStart__c.field-meta.xml
<CustomField>
    <fullName>WorkStart__c</fullName>
    <label>근무 시작 시간</label>
    <type>Time</type>
</CustomField>