force-app/main/default/objects/TestDriveStaff__c/listViews/place.listView-meta.xml
<ListView>
    <fullName>place</fullName>
    <columns>NAME</columns>
    <columns>AssignedFlagshipStore__c</columns>
    <columns>OffDays__c</columns>
    <columns>WorkStart__c</columns>
    <columns>WorkEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>지점</label>
</ListView>